<package format="2">
  <name>ros_comm_838</name>
  <version>0.0.0</version>
  <description>
    Demonstration of https://github.com/ros/ros_comm/issues/838    
  </description>
  <maintainer email="mpurvis@clearpath.ai">Mike Purvis</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>
